# hand_model

./: CMakeLists.txt  Gesture_Detection (1).ipynb  HextoPic (1).ipynb  README.md  README_cn.md  Who_camera.c  app_main.cpp  checking_model_with_image_from_esp32s3_eye.ipynb  model.cpp  model.hpp  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.old
main/: CMakeLists.txt  app_main.cpp
model/: handrecognition_coefficient.cpp  handrecognition_coefficient.hpp  model.hpp
